--- a/assets/css/bootstrap/less/forms.less
+++ b/assets/css/bootstrap/less/forms.less
@@ -9,7 +9,7 @@
 
 fieldset {
   padding: 0;
-  margin: 0;
+  margin: 0 0 15px 0;
   border: 0;
   // Chrome and Firefox set a `min-width: min-content;` on fieldsets,
   // so we reset that to ensure it behaves more like a standard block element.
