--- a/assets/css/bootstrap/less/wells.less
+++ b/assets/css/bootstrap/less/wells.less
@@ -6,7 +6,7 @@
 // Base class
 .well {
   min-height: 20px;
-  padding: 28px 19px;
+  padding: 28px;
   margin-bottom: 50px;
   background-color: @well-bg;
   border: 1px solid @well-border;
@@ -24,6 +24,6 @@
   border-radius: @border-radius-large;
 }
 .well-sm {
-  padding: 9px;
-  border-radius: @border-radius-small;
+  padding: 28px 18px;
+  border-radius: @border-radius-base;
 }
