--- a/assets/css/slick/slick.css
+++ b/assets/css/slick/slick.css
@@ -2,6 +2,7 @@
 .slick-slider {
   position: relative;
   display: block;
+  overflow: hidden;
   box-sizing: border-box;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -52,7 +53,7 @@
 }
 .slick-slide {
   float: left;
-  height: 100%;
+  /*height: 100%;*/
   min-height: 1px;
   display: none;
 }
