--- a/assets/css/slick/slick.less
+++ b/assets/css/slick/slick.less
@@ -3,6 +3,7 @@
 .slick-slider {
     position: relative;
     display: block;
+    overflow: hidden;
     box-sizing: border-box;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -61,7 +62,7 @@
 }
 .slick-slide {
     float: left;
-    height: 100%;
+    /*height: 100%;*/
     min-height: 1px;
     [dir="rtl"] & {
         float: right;
