--- a/assets/css/bootstrap/less/variables.less
+++ b/assets/css/bootstrap/less/variables.less
@@ -203,7 +203,7 @@
 @input-border-focus:             @text-color;
 
 //** Placeholder text color
-@input-color-placeholder:        lighten(@link-color, 30%);
+@input-color-placeholder:        @gray;
 
 //** Default `.form-control` height
 @input-height-base:              36px;
