--- a/assets/css/bootstrap/less/forms.less
+++ b/assets/css/bootstrap/less/forms.less
@@ -230,7 +230,7 @@ input[type="search"] {
   margin-top: 10px;
   margin-bottom: 10px;
 
-  label {
+  > label {
     min-height: @line-height-computed; // Ensure the input doesn't jump when there is no text
     padding-left: 20px;
     margin-bottom: 0;
@@ -460,7 +460,7 @@ input[type="checkbox"] {
   display: block; // account for any element using help-block
   margin-top: 5px;
   margin-bottom: 10px;
-  color: lighten(@text-color, 30%); // lighten the text some for contrast
+  color: @gray; // lighten the text some for contrast
   font-size: 11px;
 }
 
