--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -2566,14 +2566,14 @@ output {
   /*.box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px @{color-rgba}");*/
 }
 .form-control::-moz-placeholder {
-  color: #5f6c9c;
+  color: #666977;
   opacity: 1;
 }
 .form-control:-ms-input-placeholder {
-  color: #5f6c9c;
+  color: #666977;
 }
 .form-control::-webkit-input-placeholder {
-  color: #5f6c9c;
+  color: #666977;
 }
 .form-control::-ms-expand {
   border: 0;
@@ -2633,8 +2633,8 @@ input[type="search"] {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-.radio label,
-.checkbox label {
+.radio > label,
+.checkbox > label {
   min-height: 36px;
   padding-left: 20px;
   margin-bottom: 0;
@@ -2902,7 +2902,7 @@ select[multiple].input-lg {
   display: block;
   margin-top: 5px;
   margin-bottom: 10px;
-  color: #5f6c9c;
+  color: #666977;
   font-size: 11px;
 }
 @media (min-width: 768px) {
@@ -6701,9 +6701,6 @@ table > tbody + tbody {
 table .table {
   background-color: #ffffff;
 }
-table > tbody > tr:nth-of-type(odd) {
-  background-color: #e9e9eb;
-}
 section {
   margin-bottom: 50px;
 }
@@ -6844,14 +6841,14 @@ em, i {
   /*.box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px @{color-rgba}");*/
 }
 .well-form input::-moz-placeholder {
-  color: #5f6c9c;
+  color: #666977;
   opacity: 1;
 }
 .well-form input:-ms-input-placeholder {
-  color: #5f6c9c;
+  color: #666977;
 }
 .well-form input::-webkit-input-placeholder {
-  color: #5f6c9c;
+  color: #666977;
 }
 .well-form input::-ms-expand {
   border: 0;
@@ -6907,14 +6904,14 @@ textarea.well-form input {
   /*.box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px @{color-rgba}");*/
 }
 .well-sm-form input::-moz-placeholder {
-  color: #5f6c9c;
+  color: #666977;
   opacity: 1;
 }
 .well-sm-form input:-ms-input-placeholder {
-  color: #5f6c9c;
+  color: #666977;
 }
 .well-sm-form input::-webkit-input-placeholder {
-  color: #5f6c9c;
+  color: #666977;
 }
 .well-sm-form input::-ms-expand {
   border: 0;
@@ -7311,14 +7308,14 @@ fieldset[disabled] .searchbar .left-column .searchbar-catalog.focus {
   /*.box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px @{color-rgba}");*/
 }
 .searchbar .searchbar-form input::-moz-placeholder {
-  color: #5f6c9c;
+  color: #666977;
   opacity: 1;
 }
 .searchbar .searchbar-form input:-ms-input-placeholder {
-  color: #5f6c9c;
+  color: #666977;
 }
 .searchbar .searchbar-form input::-webkit-input-placeholder {
-  color: #5f6c9c;
+  color: #666977;
 }
 .searchbar .searchbar-form input::-ms-expand {
   border: 0;
@@ -7856,6 +7853,9 @@ a.icon {
   margin: 0 5px;
   background: url('img/sprite.png') no-repeat;
 }
+a.icon:hover {
+  opacity: .8;
+}
 a.icon.compare {
   background-position: 0 -80px;
 }
@@ -7876,6 +7876,12 @@ a.icon.pdf {
 }
 a.icon.view {
   background-position: 0 -170px;
+}
+a.icon.remove {
+  width: 14px;
+  height: 14px;
+  margin: 0;
+  background-position: -80px 0;
 }
 /* основное меню в левой колонке */
 .aside-menu {
@@ -8576,6 +8582,146 @@ fieldset[disabled] a.user-tabs #profile .avatar a {
 }
 .left-column .goods-list-recent li {
   margin: 0;
+}
+.cart {
+  font-size: 14px;
+  font-family: "LatoWebHeavy", "LatoWebBlack", "LatoWeb", Helvetica, Arial, sans-serif;
+}
+.cart th,
+.cart .cart-cost-desc {
+  font-size: 12px;
+  font-family: "LatoWebBlack", "LatoWeb", Helvetica, Arial, sans-serif;
+  color: #666977;
+}
+.cart th:first-child {
+  padding-left: 0;
+}
+.cart td {
+  vertical-align: middle;
+  border-bottom: 1px solid #d3d4d8;
+  padding: 20px;
+}
+.cart td:last-child {
+  text-align: right;
+  padding-right: 0;
+}
+.cart tr:last-child td {
+  border-bottom: transparent;
+}
+.cart .image {
+  width: 60px;
+  padding: 20px 0;
+}
+.cart .image img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.cart .name {
+  font-size: 12px;
+  text-transform: uppercase;
+}
+.cart .total-cost {
+  padding-left: 10px;
+}
+.cart .cart-cost-desc {
+  text-align: right;
+  padding-right: 0;
+}
+.order .input-wrapper {
+  border: 1px solid #D9E1E2;
+  margin-bottom: 50px;
+}
+.order .input-wrapper .radio {
+  background-color: #ebeff0;
+  padding: 30px;
+  margin: 0;
+  border-bottom: 1px solid #D9E1E2;
+}
+.order .input-wrapper .radio.checked {
+  background-color: #ffffff;
+}
+.order .input-wrapper .radio:last-child {
+  border-bottom: none;
+}
+.order .input-wrapper .radio > label {
+  font-family: "LatoWebBlack", "LatoWeb", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #252a3d;
+  min-height: initial;
+}
+.order .input-wrapper .radio > label .delivery-name {
+  text-transform: uppercase;
+}
+.order .input-wrapper .radio > .help-block {
+  font-size: 14px;
+  margin-bottom: 0;
+  padding-left: 20px;
+}
+.order .input-wrapper .radio .radio-extended {
+  margin-top: 30px;
+  padding-top: 30px;
+  border-top: 1px solid #D9E1E2;
+}
+.order .well {
+  border: 1px solid #D9E1E2;
+}
+.order .row .col-sm-6:first-child {
+  padding-right: 10px;
+}
+.order .row .col-sm-6:last-child {
+  padding-left: 10px;
+}
+.order textarea {
+  height: 75px;
+}
+.order h2 {
+  margin-bottom: 30px;
+}
+.order h2 span {
+  font-size: 14px;
+  font-family: "LatoWeb", Helvetica, Arial, sans-serif;
+  text-transform: none;
+  display: inline-block;
+  padding-left: 20px;
+  vertical-align: middle;
+}
+.order table {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+.order table td {
+  padding: 0 0 15px 0;
+}
+.order table td:last-child {
+  text-align: right;
+  font-family: "LatoWebHeavy", "LatoWebBlack", "LatoWeb", Helvetica, Arial, sans-serif;
+}
+.order hr {
+  border-top: 1px solid #dbe1e1;
+  margin: 0 0 30px 0;
+}
+.order .order-total-cost {
+  text-align: right;
+  font-family: "LatoWebHeavy", "LatoWebBlack", "LatoWeb", Helvetica, Arial, sans-serif;
+  font-size: 20px;
+  margin-bottom: 50px;
+}
+.order button[type=submit] {
+  font-size: 14px;
+  line-height: 48px;
+  padding: 0px 20px;
+  margin-bottom: 20px;
+}
+.order .agree {
+  font-size: 12px;
+  text-align: center;
+}
+.order .agree a {
+  color: #10c759;
+}
+.order .agree a:hover {
+  color: #10c759;
 }
 /* review */
 .reviews {
