--- a/assets/css/jquery.formstyler.css
+++ b/assets/css/jquery.formstyler.css
@@ -31,7 +31,7 @@
 	width: 14px;
 	height: 14px;
 	margin: 0 4px 0 -20px;
-	border: 1px solid #d6dad5;
+	border: 1px solid #acafbd;
 	border-radius: 50%;
 	background: white;
 /*	background: -webkit-linear-gradient(#FFF, #E6E6E6);
@@ -39,12 +39,16 @@
 	box-shadow: 0 1px 1px rgba(0,0,0,.05), inset -1px -1px #FFF, inset 1px -1px #FFF;*/
 	cursor: pointer;
 }
+.jq-radio.checked {
+  background: #10c759;
+  border-color: #10c759;
+}
 .jq-radio.checked .jq-radio__div {
 	width: 4px;
 	height: 4px;
 	margin: 4px 0 0 4px;
 	border-radius: 50%;
-	background: #787878;
+	background: #FFF;
   transition: initial;
 	/*box-shadow: inset 1px 1px 1px rgba(0,0,0,.7);*/
 }
@@ -131,29 +135,33 @@
 	position: relative;
 	display: inline-block;
 	vertical-align: middle;
-	padding: 0 36px 0 0;
+	padding: 0 10px;
 }
 .jq-number__field {
-	width: 100px;
-	border: 1px solid #CCC;
-	border-bottom-color: #B3B3B3;
-	border-radius: 4px;
-	box-shadow: inset 1px 1px #F1F1F1, 0 1px 2px rgba(0,0,0,.1);
+	width: 26px;
+        line-height: 14px;
+	border: 1px solid #d3d4d8;
+	/*border-bottom-color: #B3B3B3;*/
+	border-radius: 2px;
+	/*box-shadow: inset 1px 1px #F1F1F1, 0 1px 2px rgba(0,0,0,.1);*/
 }
 .jq-number__field:hover {
-	border-color: #B3B3B3;
+	/*border-color: #B3B3B3;*/
 }
 .jq-number__field input {
 	box-sizing: border-box;
 	width: 100%;
-	padding: 8px 9px;
+	padding: 0;
 	border: none;
 	outline: none;
 	background: none;
-	font: 14px Arial, sans-serif;
-	color: #333;
-	text-align: left; /* для Opera Presto */
+	/*font: 14px Arial, sans-serif;*/
+	/*color: #333;*/
+        font-size: 13px;
+        font-family: "LatoWeb";
+	text-align: center;
 	-moz-appearance: textfield;
+        margin-top: 3px; 
 }
 .jq-number__field input::-webkit-inner-spin-button,
 .jq-number__field input::-webkit-outer-spin-button {
@@ -164,62 +172,65 @@
 	position: absolute;
 	top: 0;
 	right: 0;
-	width: 32px;
-	height: 14px;
-	border: 1px solid #CCC;
-	border-bottom-color: #B3B3B3;
-	border-radius: 4px;
-	background: #F5F5F5;
-	background: -webkit-linear-gradient(#FFF, #E6E6E6);
+	width: 10px;
+	height: 22px;
+	/*border: 1px solid #CCC;*/
+	/*border-bottom-color: #B3B3B3;*/
+	/*border-radius: 4px;*/
+	/*background: #F5F5F5;*/
+/*	background: -webkit-linear-gradient(#FFF, #E6E6E6);
 	background:         linear-gradient(#FFF, #E6E6E6);
 	box-shadow: 0 1px 2px rgba(0,0,0,.1);
-	box-shadow: inset 1px -1px #F1F1F1, inset -1px 0 #F1F1F1, 0 1px 2px rgba(0,0,0,.1);
+	box-shadow: inset 1px -1px #F1F1F1, inset -1px 0 #F1F1F1, 0 1px 2px rgba(0,0,0,.1);*/
 	-webkit-user-select: none;
 	   -moz-user-select: none;
 	    -ms-user-select: none;
 	        user-select: none;
-	text-shadow: 1px 1px #FFF;
+	/*text-shadow: 1px 1px #FFF;*/
 	cursor: pointer;
 }
 .jq-number__spin.minus {
-	top: auto;
-	bottom: 0;
+	/*top: auto;*/
+	/*bottom: 0;*/
+        left: 0;
 }
 .jq-number__spin:hover {
-	background: #E6E6E6;
+/*	background: #E6E6E6;
 	background: -webkit-linear-gradient(#F6F6F6, #E6E6E6);
-	background:         linear-gradient(#F6F6F6, #E6E6E6);
+	background:         linear-gradient(#F6F6F6, #E6E6E6);*/
 }
 .jq-number__spin:active {
-	background: #F5F5F5;
-	box-shadow: inset 1px 1px 3px #DDD;
+/*	background: #F5F5F5;
+	box-shadow: inset 1px 1px 3px #DDD;*/
 }
 .jq-number__spin:after {
-	content: '';
+	content: '+';
 	position: absolute;
-	top: 4px;
-	left: 11px;
+	top: 2px;
+	left: 4px;
 	width: 0;
 	height: 0;
-	border-right: 5px solid transparent;
-	border-bottom: 5px solid #999;
-	border-left: 5px solid transparent;
+	/*border-right: 5px solid transparent;*/
+	/*border-bottom: 5px solid #999;*/
+	/*border-left: 5px solid transparent;*/
 }
 .jq-number__spin.minus:after {
-	top: 5px;
-	border-top: 5px solid #999;
-	border-right: 5px solid transparent;
-	border-bottom: none;
-	border-left: 5px solid transparent;
+        content: '-';
+	top: 0px;
+        left: 0;
+	/*border-top: 5px solid #999;*/
+	/*border-right: 5px solid transparent;*/
+	/*border-bottom: none;*/
+	/*border-left: 5px solid transparent;*/
 }
-.jq-number__spin.minus:hover:after {
+/*.jq-number__spin.minus:hover:after {
 	border-top-color: #000;
 }
 .jq-number__spin.plus:hover:after {
 	border-bottom-color: #000;
-}
+}*/
 .jq-number.focused .jq-number__field {
-	border: 1px solid #5794BF;
+	border: 1px solid #252a3d;
 }
 .jq-number.disabled .jq-number__field,
 .jq-number.disabled .jq-number__spin {
