--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -14,7 +14,7 @@
 body {
   //height: 100%;
   position: relative;
-  &::_after {
+  &::after {
     content: "";
     background: url('@{img-path}design.jpg') no-repeat; // fixed;
     background-size: auto;
