--- a/assets/css/cart.less
+++ b/assets/css/cart.less
@@ -1,45 +1,54 @@
 .cart {
-  font-size: 14px;
-  font-family: @heavy-font-family;
-  th, .cart-cost-desc {
-    font-size: 12px;
-    font-family: @headings-font-family;
-    color: @gray;
+  h2 {
+    line-height: 20px;
+    margin-bottom: 20px;
   }
-  th:first-child {
-    padding-left: 0;
-  }
-  td {
-    vertical-align: middle;
-    border-bottom: 1px solid @table-border-color;
-    padding: 20px;
-    &:last-child {
+  table {
+    font-size: 14px;
+    font-family: @heavy-font-family;
+    th, .cart-cost-desc {
+      font-size: 12px;
+      font-family: @headings-font-family;
+      color: @gray;
+    }
+    th:first-child {
+      padding-left: 0;
+    }
+    td {
+      vertical-align: middle;
+      border-bottom: 1px solid @table-border-color;
+      padding: 20px;
+      &:last-child {
+        text-align: right;
+        padding-right: 0;
+      }
+    }
+    tr {
+      &:last-child td {
+        border-bottom: transparent;
+      }
+    }
+    .image {
+      width: 60px;
+      padding: 20px 0;
+      img {
+        .img-responsive;
+      }
+    }
+    .name {
+      font-size: 12px;
+      .text-uppercase;
+    }
+    .total-cost {
+      padding-left: 10px;
+    }
+    .cart-cost-desc {
       text-align: right;
       padding-right: 0;
     }
-  }
-  tr {
-    &:last-child td {
-      border-bottom: transparent;
+    .price, .total-cost {
+      white-space: nowrap;
     }
-  }
-  .image {
-    width: 60px;
-    padding: 20px 0;
-    img {
-      .img-responsive;
-    }
-  }
-  .name {
-    font-size: 12px;
-    .text-uppercase;
-  }
-  .total-cost {
-    padding-left: 10px;
-  }
-  .cart-cost-desc {
-    text-align: right;
-    padding-right: 0;
   }
 }
 
@@ -98,6 +107,8 @@
       vertical-align: middle;
     }
   }
+}
+.order-summary {
   table {
     font-size: @font-size-base;
     margin-bottom: 10px;
@@ -130,6 +141,30 @@
     text-align: center;
     a {
       .green-link;
+    }
+  }
+}
+
+.order-complete-row-wrapper {
+  .row;
+  display: flex;
+  .left-column {
+    margin-right: 100px;
+    flex: 1;
+  }
+  .right-column {
+    max-width: 420px;
+    .tnx {
+      background: #65fba1;
+      padding: 30px;
+      margin-bottom: 45px;
+      line-height: 16px;
+    }
+    h2 {
+      margin-bottom: 20px;
+    }
+    p {
+      margin-bottom: 12px;
     }
   }
 }
