--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -6712,10 +6712,10 @@ em, i {
   font-family: @italic-font-family;
 }*/
 .gray-link {
-  color: #5f6c9c;
+  color: rgba(37, 42, 61, 0.7);
 }
 .gray-link:hover {
-  color: #5f6c9c;
+  color: rgba(37, 42, 61, 0.77);
 }
 .green-link {
   color: #10c759;
@@ -7120,10 +7120,10 @@ header menu li {
   padding: 0 16px;
 }
 header menu li a {
-  color: #5f6c9c;
+  color: rgba(37, 42, 61, 0.7);
 }
 header menu li a:hover {
-  color: #5f6c9c;
+  color: rgba(37, 42, 61, 0.77);
 }
 header .header-phone {
   display: table-cell;
@@ -7539,10 +7539,10 @@ fieldset[disabled] .searchbar .searchbar-form button.focus {
   content: none;
 }
 .searchbar .user ul a {
-  color: #5f6c9c;
+  color: rgba(37, 42, 61, 0.7);
 }
 .searchbar .user ul a:hover {
-  color: #5f6c9c;
+  color: rgba(37, 42, 61, 0.77);
 }
 .searchbar .user:hover {
   background-color: #1d2233;
@@ -7940,16 +7940,119 @@ a.icon.remove {
 .aside-menu > li > ul li::before {
   content: none;
 }
-.aside-menu > li > ul a {
+.aside-menu > li > ul > li {
+  position: relative;
+}
+.aside-menu > li > ul > li.with-extended:hover > .extended-menu {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+.aside-menu > li > ul > li.with-extended:hover > a::before {
+  content: '';
+  position: absolute;
+  right: -1px;
+  top: 6px;
+  border-style: solid;
+  border-width: 8px 6px;
+  border-color: transparent #ebeff0 transparent transparent;
+  z-index: 9991;
+}
+.aside-menu > li > ul > li.with-extended:hover > a::after {
+  content: '';
+  position: absolute;
+  right: -2px;
+  top: 9px;
+  border-style: solid;
+  border-width: 5px 4px;
+  border-color: transparent #ffffff transparent transparent;
+  z-index: 9993;
+}
+.aside-menu > li > ul > li > a {
   display: block;
   padding: 6px;
 }
-.aside-menu > li > ul a:hover,
-.aside-menu > li > ul a:focus {
+.aside-menu > li > ul > li > a:hover {
   text-decoration: none;
   background-color: #252a3d;
   color: white;
   padding-left: 16px;
+}
+.aside-menu .extended-menu {
+  display: none;
+  position: absolute;
+  left: 230px;
+  top: -50px;
+  z-index: 9992;
+  border: 2px solid #ebeff0;
+  background-color: #ffffff;
+  padding: 28px 30px;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+.aside-menu .extended-menu .list {
+  padding-right: 30px;
+}
+.aside-menu .extended-menu .list > ul {
+  -moz-column-gap: 38px;
+  -webkit-column-gap: 38px;
+  column-gap: 38px;
+}
+.aside-menu .extended-menu .list > ul > li {
+  display: inline-block;
+  vertical-align: top;
+}
+.aside-menu .extended-menu .list > ul > li > a {
+  font-family: "LatoWebBlack", "LatoWeb", Helvetica, Arial, sans-serif;
+  font-size: 16px
+  /*white-space:*/
+}
+.aside-menu .extended-menu .list > ul > li ul {
+  margin: 5px 0 15px;
+  line-height: 21px;
+}
+.aside-menu .extended-menu .list > ul > li ul a {
+  color: rgba(37, 42, 61, 0.7);
+  text-decoration: underline;
+}
+.aside-menu .extended-menu .list > ul > li ul a:hover {
+  color: rgba(37, 42, 61, 0.77);
+}
+.aside-menu .extended-menu .list > ul > li ul a:hover {
+  text-decoration: none;
+}
+.aside-menu .extended-menu .goods {
+  padding-left: 30px;
+  border-left: 1px solid #d3d4d8;
+  margin: 0;
+}
+.aside-menu .extended-menu .goods ul {
+  width: 130px;
+  text-align: center;
+}
+.aside-menu .extended-menu .goods ul .image {
+  margin-bottom: 20px;
+}
+.aside-menu .extended-menu .goods ul .image img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.aside-menu .extended-menu .goods ul .image .discount {
+  top: -10px;
+  right: -10px;
+}
+.aside-menu .extended-menu .goods ul h3 {
+  font-family: "LatoWebHeavy", "LatoWebBlack", "LatoWeb", Helvetica, Arial, sans-serif;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+.aside-menu .extended-menu .goods ul .cost {
+  display: block;
+  font-size: 14px;
 }
 /* news */
 .news-list .news-item {
@@ -8553,9 +8656,13 @@ fieldset[disabled] a.user-tabs #profile .avatar a {
 .related-goods {
   margin-bottom: 30px;
 }
+.recent-goods h2 {
+  margin-bottom: 40px;
+}
 .goods-list-recent {
   padding-left: 0;
   list-style: none;
+  margin-bottom: 0;
   max-width: 890px;
   padding: 0 45px;
 }
@@ -8566,15 +8673,25 @@ fieldset[disabled] a.user-tabs #profile .avatar a {
   content: none;
 }
 .goods-list-recent li {
-  margin: 0 15px;
+  margin: 0 5px;
   text-align: center;
 }
-.goods-list-recent li img {
-  width: 130px;
+.goods-list-recent li .image {
+  position: relative;
+  padding: 10px 10px 0;
+}
+.goods-list-recent li .image img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 .goods-list-recent li h3 {
   font-size: 12px;
   margin: 20px 0 12px;
+  padding: 0 10px;
+}
+.goods-list-recent li p {
+  padding: 0 10px;
 }
 .goods-list-recent li .cost {
   font-size: 14px;
@@ -8880,6 +8997,7 @@ fieldset[disabled] a.user-tabs #profile .avatar a {
 }
 .big-slider {
   max-width: 890px;
+  margin-bottom: 80px;
 }
 .big-slider .slick-dots li.slick-active button:before {
   color: #cf1b42;
@@ -8896,4 +9014,52 @@ fieldset[disabled] a.user-tabs #profile .avatar a {
 }
 .big-slider ul li::before {
   content: none;
+}
+.benefits {
+  margin-bottom: 20px;
+}
+.benefits .benefits-item {
+  margin-bottom: 50px;
+}
+.benefits .benefits-item:nth-child(odd) {
+  padding-right: 25px;
+}
+.benefits .benefits-item:nth-child(even) {
+  padding-left: 25px;
+}
+.benefits .benefits-item:nth-child(2n+1) {
+  clear: left;
+}
+.benefits .benefits-item:before,
+.benefits .benefits-item:after {
+  content: " ";
+  display: table;
+}
+.benefits .benefits-item:after {
+  clear: both;
+}
+.benefits .benefits-item:before,
+.benefits .benefits-item:after {
+  content: " ";
+  display: table;
+}
+.benefits .benefits-item:after {
+  clear: both;
+}
+.benefits .benefits-item .illustration {
+  float: left;
+  padding-top: 10px;
+}
+.benefits .benefits-item .content {
+  padding-left: 60px;
+}
+.benefits .benefits-item .content h3 {
+  margin-bottom: 8px;
+}
+.benefits .benefits-item .content p {
+  color: #666977;
+  line-height: 17px;
+}
+.benefits .benefits-item .content a.btn {
+  width: auto;
 }
