--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -76,9 +76,9 @@ em, i {
   font-family: @italic-font-family;
 }*/
 .gray-link {
-  color: lighten(@link-color, 30%);
+  color: rgba(37, 42, 61, .7);
   &:hover {
-    color: lighten(@link-color, 30%);    
+    color: rgba(37, 42, 61, .77);
   }
 }
 .green-link {
@@ -140,6 +140,9 @@ em, i {
   }
 }
 /* text with columns */
+.text-two-columns {
+  
+}
 @media (min-width: @screen-sm) {
   .text-two-columns {
     -moz-columns: 2;
@@ -669,14 +672,112 @@ a.icon {
       .list-unstyled;
       margin: 10px 0 0;
       transition: initial;
-      a {
-        display: block;
-        padding: 6px;
-        &:hover, &:focus {
-          text-decoration: none;
-          background-color: @brand-primary;
-          color: white;
-          padding-left: 16px;
+      > li {
+        position: relative;
+        &.with-extended:hover {
+          > .extended-menu {
+            display: flex;
+          }
+          // стрелка
+          > a {
+            &::before {
+              content: '';
+              position: absolute;
+              right: -1px;
+              top: 6px;
+              border-style: solid;
+              border-width: 8px 6px;
+              border-color: transparent #ebeff0 transparent transparent;
+              z-index: 9991;
+            }
+            &::after {
+              content: '';
+              position: absolute;
+              right: -2px;
+              top: 9px;
+              border-style: solid;
+              border-width: 5px 4px;
+              border-color: transparent @body-bg transparent transparent;
+              z-index: 9993;
+            }
+          }
+        }
+        > a {
+          display: block;
+          padding: 6px;
+          &:hover {
+            text-decoration: none;
+            background-color: @brand-primary;
+            color: white;
+            padding-left: 16px;
+          }
+        }
+      }
+    }
+  }
+  .extended-menu {
+    display: none;
+    position: absolute;
+    left: 230px;
+    top: -50px;
+    z-index: 9992;
+    border: 2px solid #ebeff0;
+    background-color: @body-bg;
+    padding: 28px 30px;
+    align-items: stretch;
+    .list {
+      padding-right: 30px;
+      > ul {
+        -moz-column-gap: 38px;
+        -webkit-column-gap: 38px;
+        column-gap: 38px;
+        > li {
+          display: inline-block;
+          vertical-align: top;
+          > a {
+            font-family: @headings-font-family;
+            font-size: 16px;
+            /*white-space:*/ 
+          }
+          ul {
+            margin: 5px 0 15px;
+            line-height: 21px;
+            a {
+              .gray-link;
+              text-decoration: underline;
+              &:hover {
+                text-decoration: none;
+              }
+            }
+          }
+        }
+      }
+    }
+    .goods {
+      padding-left: 30px;
+      border-left: 1px solid #d3d4d8;
+      margin: 0;
+      ul {
+        width: 130px;
+        text-align: center;
+        .image {
+          margin-bottom: 20px;
+          img {
+            .img-responsive;
+          }
+          .discount {
+            top: -10px;
+            right: -10px;
+          }
+        }
+        h3 {
+          font-family: @heavy-font-family;
+          font-size: 12px;
+          margin-bottom: 10px;
+        }
+        .cost {
+          display: block;
+          font-size: 14px;
         }
       }
     }
@@ -890,6 +991,7 @@ a.icon {
 
 .big-slider {
   max-width: 890px;
+  margin-bottom: 80px;
   .slick-dots li.slick-active button:before {
     color: @brand-danger;
   }
@@ -897,5 +999,39 @@ a.icon {
     .list-unstyled;
     img {}
     .img-responsive;    
+  }
+}
+
+.benefits {
+  margin-bottom: 20px;
+  .benefits-item {
+    &:nth-child(odd) {
+      padding-right: 25px;
+    }
+    &:nth-child(even) {
+      padding-left: 25px;
+    }
+    &:nth-child(2n+1) {
+      clear: left;
+    }
+    .clearfix;
+    margin-bottom: 50px;
+    .illustration {
+      float: left;
+      padding-top: 10px;
+    }
+    .content {
+      padding-left: 60px;
+      h3 {
+        margin-bottom: 8px;
+      }
+      p {
+        color: @gray;
+        line-height: 17px;
+      }
+      a.btn {
+        width: auto;
+      }
+    }
   }
 }
