--- a/assets/css/bootstrap/less/forms.less
+++ b/assets/css/bootstrap/less/forms.less
@@ -36,7 +36,8 @@ label {
   color: #808186;
   display: inline-block;
   max-width: 100%; // Force IE8 to wrap long content (see https://github.com/twbs/bootstrap/issues/13141)
-  margin-bottom: 1px;
+  /*margin-bottom: 1px;*/
+  line-height: 20px;
   /*font-weight: bold;*/
 }
 
@@ -462,6 +463,7 @@ input[type="checkbox"] {
   margin-bottom: 10px;
   color: @gray; // lighten the text some for contrast
   font-size: 11px;
+  line-height: 15px;
 }
 
 
