--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -658,10 +658,10 @@ a.icon {
         bottom: 16px;
         width: 11px;
         height: 6px;
-        background: url('@{sprite}') -13px -70px no-repeat;
+        background: url('@{sprite}') -25px -70px no-repeat;
       }
       &.opened::after {
-        background-position: -25px -70px;
+        background-position: -13px -70px;
       }
     }    
     &:first-child > a {
@@ -846,6 +846,33 @@ a.icon {
     }
   }
 }
+section.login {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  padding: 80px 10px 0;
+  margin-bottom: 35px;
+  form {
+    flex: 1;
+    margin: 0 50px;
+    .well-form;
+    padding: 45px 48px;
+    fieldset {
+      margin-bottom: 5px;
+      &.social {
+        margin-top: 30px;
+        margin-bottom: 0;
+        ul {
+          margin-bottom: 13px;
+        }
+        .help-block {
+          line-height: 13px;
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+}
 .user-tabs {
   > div {
     padding-top: 40px;
@@ -875,7 +902,6 @@ a.icon {
       p.help-block {
         .small;
         .text-muted;
-        line-height: 14px;
       }
     }
   }
@@ -940,6 +966,7 @@ a.icon {
   .list-unstyled;
   li {
     .reviews-user {
+      color: @text-color;
       margin-bottom: 10px;
       > * {
         display: inline-block;
@@ -984,7 +1011,7 @@ a.icon {
     margin-bottom: 30px;
   }
   .slick-dots {
-        left: 0;
+    left: 0;
     bottom: 0px;
   }
 }
