--- a/assets/css/bootstrap/less/buttons.less
+++ b/assets/css/bootstrap/less/buttons.less
@@ -75,10 +75,12 @@
 }
 .btn-primary {
   .button-variant(@btn-primary-color; @btn-primary-bg; @btn-primary-border; #0e1116);
+  border-color: @btn-primary-bg;
 }
 // Success appears as green
 .btn-success {
   .button-variant(@btn-success-color; @btn-success-bg; @btn-success-border; #075025);
+  border-color: @btn-success-bg;
 }
 // Info appears as blue-green
 .btn-info {
@@ -91,6 +93,7 @@
 // Danger and error appear as red
 .btn-danger {
   .button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-border; #530b19);
+  border-color: @btn-danger-bg;
 }
 
 
