--- a/assets/css/bootstrap/less/mixins/buttons.less
+++ b/assets/css/bootstrap/less/mixins/buttons.less
@@ -6,6 +6,7 @@
 .button-variant(@color; @background; @border; @shadow-color) {
   color: @color;
   background-color: @background;
+  /*border-color: @color;*/
   border-color: @border;
 
   &:focus,
