--- a/assets/css/bootstrap/less/variables.less
+++ b/assets/css/bootstrap/less/variables.less
@@ -150,11 +150,11 @@
 
 @btn-primary-color:              #fff;
 @btn-primary-bg:                 @brand-primary;
-@btn-primary-border:             @brand-primary;
+@btn-primary-border:             #161928;
 
 @btn-success-color:              #fff;
 @btn-success-bg:                 @brand-success;
-@btn-success-border:             @brand-success;
+@btn-success-border:             #0a9842;
 
 @btn-info-color:                 #fff;
 @btn-info-bg:                    @brand-info;
@@ -166,7 +166,7 @@
 
 @btn-danger-color:               #fff;
 @btn-danger-bg:                  @brand-danger;
-@btn-danger-border:              @brand-danger;
+@btn-danger-border:              #ae092e;
 
 @btn-link-disabled-color:        #d3d4d8;
 
